<resources>
    <string name="app_name">ToDos App</string>
    <string name="home">Home</string>
    <string name="task_done">Task Done</string>
    <string name="archive">Archive</string>
    <string name="account">Account</string>
    <string name="add_todos">Add Todos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_todos">You have no to-dos</string>
    <string name="todos">Todos</string>
    <string name="example_title_todos_card">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="example_todos_card_desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="date_asc">Date ASC</string>
    <string name="date_desc">Date DESC</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_priority"><b>Select Priority</b></string>
    <string name="pick_deadline">Pick Deadline</string>
    <string name="error_text">Please fill the field!</string>
    <string name="no_deadline">No Deadline</string>
    <string name="select_deadline">Select Deadline</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_todos">Delete Todos</string>
    <string name="close">Close</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="add_to_archive">Add to Archive</string>
    <string name="delete_confirm">Do you want delete this todos?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="todos_delete_info">Todos successfully deleted</string>
    <string name="menu_item">Menu Item</string>
    <string name="delete_all_todos">Do you want to delete all todos ?</string>
    <string name="delete_all_confirmation">All todos successfully deleted</string>
    <string name="filter_by">Filter By</string>
    <string name="all">All</string>
    <string name="example_date">23–02–2023</string>
    <string name="todos_add_info">Todos successfully added</string>
    <string name="todos_update_info">Todos successfully update</string>
    <string name="todos_archive_info">Move to archive success</string>
    <string name="todos_done_info">Move to done success</string>
    <string name="about">About</string>
</resources>