<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sortByMenu"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/date_asc"
                android:title="@string/date_asc" />
            <item
                android:id="@+id/date_desc"
                android:title="@string/date_desc" />
        </menu>
    </item>
    <item
        android:id="@+id/filterByMenu"
        android:title="@string/filter_by">
        <menu>
            <item
                android:id="@+id/all_priority"
                android:title="@string/all" />
            <item
                android:id="@+id/high_priority"
                android:title="@string/high_priority" />
            <item
                android:id="@+id/medium_priority"
                android:title="@string/medium_priority" />
            <item
                android:id="@+id/low_priority"
                android:title="@string/low_priority" />
        </menu>
    </item>
    <item
        android:id="@+id/deleteAllTodos"
        android:title="@string/delete_all" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
</menu>