<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todos_card"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/menu_item"
            android:src="@drawable/ic_more_horiz"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/title_todos_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="2"
            android:paddingHorizontal="16dp"
            android:paddingTop="20dp"
            android:text="@string/example_title_todos_card"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/todos_created_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_date"
            android:layout_below="@+id/title_todos_card"
            android:textSize="11sp"
            android:textStyle="italic"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="3dp"/>


        <TextView
            android:id="@+id/desc_todos_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/todos_created_date"
            android:layout_marginTop="7dp"
            android:ellipsize="end"
            android:fontFamily="@font/times"
            android:justificationMode="inter_word"
            android:maxLines="6"
            android:paddingHorizontal="15dp"
            android:text="@string/example_todos_card_desc"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/todos_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc_todos_card"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:textSize="12sp"
                tools:background="@color/alice_blue"
                tools:text="Low"
                tools:textColor="@color/blue" />

            <TextView
                android:id="@+id/txt_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/pastel_red"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:textSize="12sp"
                tools:text="20 Maret 2023" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>